--- a/src/frontend/user/src/components/tweets/tweets.css
+++ b/src/frontend/user/src/components/tweets/tweets.css
@@ -1,45 +1,62 @@
 .main-body {
     display: flex;
     flex-direction: column;
-    background-color: #11171d;
+    background:#3498db;
     min-height: 80rem;
-  }
+}
   
-  .body {
+.body {
     display: flex;
     flex-direction: column; 
-  }
-  
-  .inner-body {
+}
+
+.inner-body {
     display: flex;
     flex-direction: row;
-  }
-  
-  .tweet-body {
+}
+
+.createtweetbody {
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 10px;
+}
+
+.tweetinput {
+    height: 30px;
+    border-radius: 15px;
+    margin-right: 10px;
+}
+
+.tweetsubmit {
+    border-radius: 3%;
+}
+
+.tweet-body {
     display: flex;
     flex-direction: column;
     width: 566px;
-    height: 170px;
+    height: 130px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
     background-color: #15202a;
     margin-left: 25rem;
     margin-bottom: 0.1rem;
-  }
-  
-  .tweet-body:hover { 
+    border-radius: 15px;
+}
+
+.tweet-body:hover { 
     background-color: #11171d;
     border: #ffffff;
-  }
-  
-  .picture {
+}
+
+.picture {
     margin-left: 24px;
     margin-top: 17px;
     border-radius: 50%;
     width: 48px;
     height: 48px;
-  }
-  
-  .name {
+}
+
+.name {
     display: flex;
     flex-direction: row;
     margin-left: 15px;
@@ -54,9 +71,9 @@
     line-height: normal;
     letter-spacing: -0.6px;
     color: #ffffff;
-  }
-  
-  .handle {
+}
+
+.handle {
     margin-left: 10px;
     margin-top: 19px;
     min-width: 128px;
@@ -69,9 +86,9 @@
     line-height: normal;
     letter-spacing: -0.6px;
     color: #75797d;
-  }
-  
-  .tweet {
+}
+
+.tweet {
     margin-left: 15px;
     margin-top: 7px;
     width: 445px;
@@ -84,4 +101,5 @@
     line-height: normal;
     letter-spacing: -0.6px;
     color: #ffffff;
-  }
+    word-break: break-all;
+}
